feat: mobile page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes roulette {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(calc(-685px));
+  }
+}
