--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+@keyframes fadeInUp {
+  0% {
+     opacity: 0;
+     transform: translateY(90px);
+  }
+  100% {
+     opacity: 1;
+     transform: translateY(0);
+  }
+} 
+
+@keyframes fadeInDown {
+  0% {
+     opacity: 0;
+     transform: translateY(-90px);
+  }
+  100% {
+     opacity: 1;
+     transform: translateY(0);
+  }
+} 
+
 @keyframes roulette {
   0% {
     transform: translateX(0);
